Databasescript aangepast: testdata toegevoegd Afbeelding toegevoegd aan Assets folder (content copy always) Databaseclass gewijzigd: meldingen als static toegevoegd DisplayWindow toegevoegd met binding App.Xaml ingericht MainWindow verwijderd

--- a/Lj2Dd1En2/Lj2Dd1En2.csproj
+++ b/Lj2Dd1En2/Lj2Dd1En2.csproj
@@ -8,6 +8,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Assets\pizzeria_14.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Assets\pizzeria_14.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="MySql.Data" Version="8.0.28" />
   </ItemGroup>
 
