--- a/Lj2Dd1En2/Lj2Dd1En2.csproj
+++ b/Lj2Dd1En2/Lj2Dd1En2.csproj
@@ -8,10 +8,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Assets\del.png" />
     <None Remove="Assets\pizzeria_14.png" />
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="Assets\del.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Assets\pizzeria_14.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
