Views toegevoegd: - MealCreateWindow - MealUpdateWindow
MealWindow aangepast:
- Edit/Deleteknop per meal
- Create knop

Assets toegevoegd voor de afbeeldingen Edit en Delete

--- a/Lj2Dd1En2/Lj2Dd1En2.csproj
+++ b/Lj2Dd1En2/Lj2Dd1En2.csproj
@@ -8,12 +8,20 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Assets\add.png" />
     <None Remove="Assets\del.png" />
+    <None Remove="Assets\edit.png" />
     <None Remove="Assets\pizzeria_14.png" />
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="Assets\add.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Assets\del.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Assets\edit.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Assets\pizzeria_14.png">
